@@ -4,7 +4,6 @@ import static hello.Helper.sendJson;
 
 import io.undertow.server.HttpHandler;
 import io.undertow.server.HttpServerExchange;
-import java.util.Collections;
 import java.util.Map;
 
 /**
@@ -13,8 +12,7 @@ import java.util.Map;
 final class JsonHandler implements HttpHandler {
   @Override
   public void handleRequest(HttpServerExchange exchange) {
-    Map<String, String> value =
-        Collections.singletonMap("message", "Hello, World!");
+    Map<String, String> value = Map.of("message", "Hello, World!");
     sendJson(exchange, value);
   }
 }
